<resources>
    <string name="app_name">TestAssistant</string>

    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="quit">退出</string>
    <string name="times_error">读取错误，请检查次数和间隔时间！</string>
    <string name="number_short">当前号码太短了。请重新输入哦！</string>
    <string name="tv_call_pass">已拨打</string>
    <string name="tv_call_total">计划</string>
    <string name="ht_call_frequency">请输入两次拨打间隔时间!</string>
    <string name="tv_call_frequency">间隔:</string>
    <string name="ht_call_times">请输入拨打次数!</string>
    <string name="tv_call_times">次数:</string>
    <string name="et_call_phone">请输入对方号码！</string>
    <string name="tv_call_phone">号码：</string>
    <string name="tv_call_notes">输入号码/次数/间隔时间，然后点击开始拨号即可开始测试咯！</string>
    <string name="tv_answer_notes">被叫方，用来接听来电！</string>
    <string name="et_answer_phone_ref_num">请输入对方号码！</string>
    <string name="et_answer_wait">请输入等待时间</string>
    <string name="ck_answer">接听</string>
    <string name="tv_answer_status">将接听指定号码来电</string>
    <string name="tv_answer_total">小计:</string>
    <string name="tv_answer_pass">当前</string>
    <string name="tv_answer_fail">Fail:</string>
    <string name="bt_answer_start">开始</string>
    <string name="bt_answer_stop">停止</string>
    <string name="tv_call_fail">剩余</string>
    <string name="bt_call_start">开始拨号</string>
    <string name="bt_call_stop">停止拨号</string>
    <string name="Call_Completed">呼叫结束</string>
    <string name="ignore_incoming">拒接来电？</string>
    <string name="manually_stop">已经手动停止</string>
    <string name="notices">间隔时间建议设置为30秒以上哦，否则会打不通哦！</string>
    <string name="testing">测试进行中</string>
    <string name="main_notes">If you want make call please select Call; If you want answer call
        please select answer.
    </string>
    <string name="title_activity_call_log">CallLog</string>

</resources>
